--- a/w04/d3/express-middleware/instructor/express-todos/views/index.ejs
+++ b/w04/d3/express-middleware/instructor/express-todos/views/index.ejs
@@ -7,5 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <a href="/todos">To-Do List</a>
+<br>
+    <a href="/todos/new">Add a TODO</a>
   </body>
 </html>
