--- a/w04/d3/express-middleware/instructor/express-todos/views/index.ejs
+++ b/w04/d3/express-middleware/instructor/express-todos/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <a href="/todos">To-Do List</a>
+    <a href="/todos">Todo List</a>
 <br>
     <a href="/todos/new">Add a TODO</a>
   </body>
