--- a/w04/d3/express-middleware/instructor/express-todos/views/todos/index.ejs
+++ b/w04/d3/express-middleware/instructor/express-todos/views/todos/index.ejs
@@ -13,6 +13,11 @@
   <ul>
     <% todos.forEach(function(t) { %>
       <li>
+        <form action="/todos/<%= t.id %>?_method=DELETE"
+          method="POST" >
+          <button type="submit">X</button>
+        </form>
+
         <a href="/todos/<%= t.id %>"><%= t.todo %></a>
           - 
         <%= t.done ? 'done' : 'not done' %>
